--- a/visual_data_story.html
+++ b/visual_data_story.html
@@ -473,6 +473,10 @@ meaningful insights about my own behavior. The process also gave me a
 chance to combine visual storytelling with creativity and data skills —
 and of course, some cats.</p>
 </div>
+<div id="url-github" class="section level2">
+<h2>URL GitHub</h2>
+<p>![“<a href="https://github.com/Beata-Tata/stats220/blob/main/visual_data_story.html" class="uri">https://github.com/Beata-Tata/stats220/blob/main/visual_data_story.html</a>”]</p>
+</div>
 
 
 
